implement splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="menu_about">About Me</string>
     <string name="nama_profil">Mario Claudius</string>
     <string name="email_profil">mcmario7901@gmail.com</string>
+    <string name="recreation_place_app">Recreation Place App</string>
 </resources>
